# n-queens-cuda

./: .gitignore  CMakeLists.txt  README.md
src/: constants.hpp  cuda.cu  cuda.hpp  main.cpp
